--- a/index.html
+++ b/index.html
@@ -141,5 +141,11 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="app.js"></script>
 
+ <audio controls>
+    <source src="/Users/hamiltonsheppard/Desktop/MicroservicesPt2/microservice-frontend/free short dark music 001.mp3" type="audio/ogg">
+    <source src="/Users/hamiltonsheppard/Desktop/MicroservicesPt2/microservice-frontend/free short dark music 001.mp3" type="audio/mpeg">
+  </audio>
+  <p>Click the play button</p>       
+ 
 </body>
 </html>
