--- a/Checkout.html
+++ b/Checkout.html
@@ -32,12 +32,12 @@
                 <div class="title">
                     <div class="row">
                         <div class="col">
-                            <h4><b>Shopping Cart</b></h4>
+                            <h4><b>Checkout History</b></h4>
                         </div>
-                        <div id="item-count" class="col align-self-center text-right text-muted"></div>
+                        <div id="item-count3" class="col align-self-center text-right text-muted"></div>
                     </div>
                 </div>
-                <div class="row border-top border-bottom" id="cart-list">
+                <div class="row border-top border-bottom" id="cart-list3">
 
                 </div>
 
@@ -45,20 +45,17 @@
             </div>
             <div class="col-md-4 summary">
                 <div>
-                    <h5<br>Summary</h5>
+
+                    <h5><b>Summary</b></h5>
                 </div>
                 <hr>
                 <div class="row">
                     <div class="col" style="padding-left:0;">TOTAL ITEM</div>
-                    <div id="item-total" class="col text-right"></div>
+                    <div id="item-total3" class="col text-right"></div>
                 </div>
                 <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
                     <div class="col">TOTAL PRICE</div>
-                    <div id="item-price" class="col text-right"></div>
-                </div> <button id="checkout" onclick="checkOut()" class="btn">CHECKOUT with free Shipping</button>
-            </div> <button id="checkout" onclick="checkOut2()" class="btn">CHECKOUT with Express Shipping</button>
-        </div> <button id="checkout" onclick="checkOut3()" class="btn">CHECKOUT with Overnight Shipping</button>
-    </div>
+                    <div id="item-price3" class="col text-right"></div>
             </div>
         </div>
     </div>
@@ -69,7 +66,7 @@
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="app.js"></script>
-<script src="cart.js"></script>
+<script src="Checkout.js"></script>
 
 </body>
 </html>
