--- a/cart.html
+++ b/cart.html
@@ -62,6 +62,16 @@
     </div>
 </div>
 
+    
+<form action = "mailto:contaxt@yourdomain.com"
+method = "POST"
+enctype = "multipart/form-data"
+name = "EmailTestForm">
+Name:<br>
+<input type = "text" size="24" name="VisitorName"><br><br>
+Message:<br> <textarea name = "VisitorComment" rows="4" cols="20">
+</textarea><br><br> <input type = "submit" value = "Submit">
+</form>
 
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
